# SMK-Accounting-

./: README.md  pyproject.toml
smk_accounting/: hooks.py  modules.txt
smk_accounting/public/js/: landed_cost_voucher.js  payment_entry.js  purchase_invoice.js
smk_accounting/public/py/: payment_entry.py
smk_accounting/smk_petrochemicals_accounting/custom/: advance_taxes_and_charges.json  landed_cost_voucher.json  payment_entry.json  purchase_invoice.json  purchase_invoice_item.json  purchase_taxes_and_charges.json
smk_accounting/smk_petrochemicals_accounting/page/expences_breakup_gst/: expences_breakup_gst.html  expences_breakup_gst.js  expences_breakup_gst.json  expences_breakup_gst.py
smk_accounting/smk_petrochemicals_accounting/page/expenses_breakup_gst/: expenses_breakup_gst.js  expenses_breakup_gst.json  expenses_breakup_gst.py
smk_accounting/smk_petrochemicals_accounting/page/funds_planning_repor/: funds_planning_repor.html  funds_planning_repor.js  funds_planning_repor.json  funds_planning_repor.py
smk_accounting/smk_petrochemicals_accounting/print_format/purchase_invoice/: purchase_invoice.json
